# heritgo-be-backup

./: .gitignore  main.py  manage.py  pyproject.toml
.github/workflows/: ci.yml
apps/users/: models.py  serializers.py  urls.py  views.py
heritgo/: asgi.py  urls.py  wsgi.py
heritgo/settings/: base.py  develop.py  local.py
utils/auth/: heritgo.py
