[project]
name = "heritgo-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.14",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "mysqlclient>=2.2.8",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "ipython>=9.13.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    ".venv",
    "migrations",
    "*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"cinesync/settings/*.py" = ["F403", "F405"]
